[tool.poetry]
name = "fit5217"
version = "0.1.0"
description = ""
authors = ["Alistair McCutcheon <alistairdmccutcheon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Unidecode = "^1.3.6"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
tensorboard = "^2.12.2"
nltk = "^3.8.1"

[tool.poetry.dev-dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
